# afi-platform

./: .gitignore  CONTRIBUTING.md  DEVLOG.md  README.md  pyproject.toml
.agentsociety/env_modules/: ewtoolspace.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
afi/: __init__.py  cli.py
afi/audit/: __init__.py  __main__.py  attribution.py  awi.py  causal.py  collude.py  comparison.py  decision_trace.py  html_report.py  load.py  map_bg.py  map_places.py  replay_data.py  runtime_monitor.py  sensorium.py  statistical.py  tunnel_vision.py
afi/backend/: __init__.py  _concordia_worker.py  agentsociety.py  as_requirements.md  base.py  concordia.py
afi/backend_patches/: install_to_as.sh  simple_social_space_patched.py
afi/world/: __init__.py  constitution.py  counterfactual.py  economy.py  ew_tools.py  landmarks.py  multi_model.py  profiles.py  scenario.py  scenario_presets.py
custom/envs/: billboard_space.py  crime_space.py  economy_space.py  energy_space.py  ew_mobility_space.py  ew_tool_space.py  governance_space.py  landmark_space.py  relationship_space.py  (+1 more)
demo/: .gitignore  README.md  app.py  styles.py
docs/: a2-plan.md  a3-plan.md  a4-plan.md  architecture-and-roadmap.md  collaboration-guide.md  eval-suite-goals.md  eval-suite-plan.md  ew-afi-analysis.md  progress-summary.md  technical-architecture.md  three-platforms-intro.md
scenarios/: ew-economic-smoke.yaml  ew-subset.yaml  ew_full.yaml  rct_control.yaml  rct_treatment.yaml
tests/: test_awi_and_envs.py  test_ew_economy_space.py  test_ew_tool_catalog.py
(+10 files in other folders)
